checkpoint 13 assignment completed

--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,2 +1,6 @@
 <h1>Welcome#about</h1>
 <p>Find me in app/views/welcome/about.html.erb</p>
+
+<button>
+    <%= link_to "LinkedIn", "https://www.linkedin.com/in/tim-dickeson-32a109148/", class: "social-btn" %>
+</buton>
