--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,10 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<h1>All Ads</h1>
+<% @advertisements.each do |ad| %>
+    <div class="media">
+        <div class="media-body">
+            <h4 class="media-heading">
+                <%= link_to "$#{ad.price}: #{ad.title}", ad %>
+            </h4>
+        </div>
+    </div>
+<% end %>
