--- a/app/views/advertisements/new.html.erb
+++ b/app/views/advertisements/new.html.erb
@@ -1,7 +1,7 @@
 <h1>New Ad</h1>
 
 <div class = "row">
-    <% form_for @advertisement do |f| %>
+    <%= form_for @advertisement do |f| %>
         <div class="form-group">
             <%= f.label :title %>
             <%= f.text_field :title, class: 'form-control', placeholder: "Enter post title" %>
@@ -17,5 +17,5 @@
         <div class="form-group">
             <%= f.submit "Save", class: 'btn btn-success'%>
         </div>
-    <% end %>
+    <%= end %>
 </div>
