--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -20,8 +20,22 @@
                 </div>
             </div>
         <% end %>
+        
+        <% @topic.sponsored_posts.each do |sp| %>
+            <div class="media">
+                <div class="media-body">
+                    <h4 class="media-heading">
+                        <%= link_to sp.title, topic_sponsored_post_path(@topic, sp) %>
+                    </h4>
+                </div>
+            </div>
+        <% end %>
     </div>
     <div class="col-md-4">
         <%= link_to "New Post", new_topic_post_path(@topic), class: 'btn btn-success' %>
+    </div>
+    <br>
+    <div class="col-md-4">
+        <%= link_to "New Sponsored Post", new_topic_sponsored_post_path(@topic), class: 'btn btn-success' %>
     </div>
 </div>
