--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -20,7 +20,21 @@
 </div>
 
 <h2>Posts</h2>
-<%= render @user.posts %>
+<% if @user.posts.any? %>
+    <%= render @user.posts %>
+<% else %>
+    <p><%= @user.name %> has not submitted any posts</p>
+<% end %>
 
 <h2>Comments</h2>
-<%= render @user.comments %>
+<% if @user.comments.any? %>
+    <%= render @user.comments %>
+<% else %>
+    <p><%= @user.name %> has not submitted any comments</p>
+<% end %>
+
+<h2>Favorites</h2>
+<% if @user.favorites.any? %>
+    <%= render @favorite_posts %>
+<% else %>
+    <p><%= @user.name %> has not favorited any posts</p>
