--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,9 +1,9 @@
-<%= content_tag :div, class: 'media', id: "comment-#{comment.id}" do %>
-    <div class="media-body">
+<%= content_tag :div, class: 'media', id: 'comment-#{comment.id}' do %>
+    <div class='media-body'>
         <small>
             <%= comment.user.name %> commented <%= time_ago_in_words(comment.created_at) %> ago
             <% if user_is_authorized_for_comment?(comment) %>
-                | <%= link_to "Delete", [comment.post, comment], method: :delete %>
+                | <%= link_to 'Delete', [comment.post, comment], method: :delete %>
             <% end %>
         </small>
         <p><%= comment.body %></p>
