--- a/app/views/favorite_mailer/new_comment.html.erb
+++ b/app/views/favorite_mailer/new_comment.html.erb
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
+        <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
     </head>
     <body>
-        <h1>New comment to "<%= @post.title %>"</h1>
+        <h1>New comment to '<%= @post.title %>'</h1>
         <small>
             By: <%= @comment.user.name %>
         </small>
@@ -12,7 +12,7 @@
             <%= @comment.body %>
         </p>
         <p>
-            <%= link_to "View Comment on site", topic_post_url(@post.topic, @post, anchor: "comment-#{@comment.id}") %>
+            <%= link_to 'View Comment on site', topic_post_url(@post.topic, @post, anchor: 'comment-#{@comment.id}') %>
         </p>
     </body>
 </html>
