--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,49 +1,29 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Bloccit</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Reddit Clone</title>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
-    <div class="container">
-      <ul class="nav nav-tabs">
-        <li><%= link_to "Bloccit", root_path %></li>
-        <li><%= link_to "Topics", topics_path %></li>
-        <li><%= link_to "About", about_path %></li>
-        <div class="pull-right user-info">
-          <% if current_user %>
-            <div class="pull-right">
-              <li class="pull-right"><%= link_to current_user.name, user_path(current_user) %></li>
-              <br>
-              <li class="pull-right"><%= link_to "Sign Out", session_path(current_user), method: :delete %></li>
-            </div>
-            <li class="pull-right"><%= image_tag current_user.avatar_url(48) %></li>
-          <% else %>
-            <li class="pull-right"><%= link_to "Sign In", new_session_path %></li>
-            <br>
-            <li class="pull-right"><%= link_to "Sign Up", new_user_path %></li>
-          <% end %>
-        </div>
-      </ul>
+  <body class='container'>
+    <%= render 'layouts/nav' %>
       
-      <% if flash[:notice] %>
-        <div class="alert alert-success">
-          <button type="button" class="close" data-dismiss="alert">&times;</button>
-          <%= flash[:notice] %>
-        </div>
-      <% elsif flash[:alert] %>
-        <div class="alert alert-warning">
-          <button type="button" class="close" data-dismiss="alert">&times;</button>
-          <%= flash[:alert] %>
-        </div>
-      <% end %>
-      
-      <%= yield %>
-    </div>
+    <% if flash[:notice] %>
+      <div class='alert alert-success'>
+        <%= flash[:notice] %>
+        <button type='submit' class='btn' data-dismiss='alert'>&times;</button>
+      </div>
+    <% elsif flash[:alert] %>
+      <div class='alert alert-warning'>
+        <%= flash[:alert] %>
+        <button type='submit' class='btn' data-dismiss='alert'>&times;</button>
+      </div>
+    <% end %>
+    
+    <%= yield %>
   </body>
 </html>
