--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,7 +1,7 @@
-<div class="media">
+<div class='media'>
     <%= render partial: 'votes/voting', locals: { post: post } %>
-    <div class="media-body">
-        <h4 class="media-heading">
+    <div class='media-body'>
+        <h4 class='media-heading'>
             <%= link_to post.title, topic_post_path(post.topic, post) %>
         </h4>
         <small>
