--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -8,8 +8,8 @@
     </h1>
 </div>
 
-<div class="row">
-    <div class="col-md-8">
+<div class='row'>
+    <div class='col-md-8'>
         <p><%= @post.body %></p>
         <div>
             <h3>Comments</h3>
@@ -20,12 +20,12 @@
         <% end %>
     </div>
     <% if user_is_authorized_for_post?(@post) %>
-        <div class="col-md-4">
-            <%= link_to "Edit", edit_topic_post_path(@post.topic, @post), class: 'btn btn-success' %>
-            <%= link_to "Delete Post",[@post.topic, @post], method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure you want to delete this post?'} %>
+        <div class='col-md-4'>
+            <%= link_to 'Edit', edit_topic_post_path(@post.topic, @post), class: 'btn btn-success' %>
+            <%= link_to 'Delete Post',[@post.topic, @post], method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure you want to delete this post?'} %>
         </div>
     <% end %>
-    <div class="col-md-4">
+    <div class='col-md-4'>
         <h3>
             <%= pluralize(@post.points, 'point') %>
             <div>
