--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -1,23 +1,22 @@
-<h1>Topics</h1>
-
-<div class="row">
-    <div class="col-md-8">
-        <% @topics.each do |topic| %>
-            <div class="media">
-                <div class="media-body">
-                    <h4 class="media-heading">
-                        <%= link_to topic.name, topic %>
-                    </h4>
-                    <small>
-                        <%= topic.description %>
-                    </small>
-                </div>
-            </div>
-        <% end %>
-    </div>
+<div class='row'>
+    <h1 class='col-md-8'>Topics</h1>
     <% if user_is_authorized_for_topics? %>
-        <div class="col-md-4">
-            <%= link_to "New Topic", new_topic_path, class: 'btn btn-success' %>
+        <div class='col-md-4'>
+            <%= link_to 'New Topic', new_topic_path, class: 'btn btn-success' %>
         </div>
     <% end %>
+
+    <% @topics.each do |topic| %>
+        <div class='my-3'>
+            <div class=''>
+                <h4>
+                    <%= link_to topic.name, topic %>
+                </h4>
+                <small>
+                    <%= topic.description %>
+                </small>
+            </div>
+        </div>
+    <% end %>
+    
 </div>
