--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -25,7 +25,7 @@
         <% end %>
     </div>
     <% if current_user %>
-        <div class="col-md-4">
+        <div class="">
             <%= link_to "New Post", new_topic_post_path(@topic), class: 'btn btn-success' %>
         </div>
     <% end %>
