--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,15 +1,15 @@
-<div class="row">
-    <div class="col-md-8">
-        <div class="media">
+<div class='row'>
+    <div class='col-md-8'>
+        <div class='media'>
             <br>
             <% avatar_url = @user.avatar_url(128) %>
             <% if avatar_url %>
-                <div class="media-left">
+                <div class='media-left'>
                     <%= image_tag avatar_url, class: 'media-object' %>
                 </div>
             <% end %>
-            <div class="media-body">
-                <h2 class="media-heading"><%= @user.name %></h2>
+            <div class='media-body'>
+                <h2 class='media-heading'><%= @user.name %></h2>
                 <small>
                     <%= pluralize(@user.posts.count, 'post') %>,
                     <%= pluralize(@user.comments.count, 'comment') %>
