--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,6 +1,7 @@
-<h1>Welcome#about</h1>
-<p>Find me in app/views/welcome/about.html.erb</p>
-
-<button>
-    <%= link_to "LinkedIn", "https://www.linkedin.com/in/tim-dickeson-32a109148/", class: "social-btn" %>
-</buton>
+<div class='container text-center'>
+    <h1>Welcome to my about page</h1>
+    <h3>Check out my other stuff:</h3>
+    <%= link_to 'LinkedIn', 'https://www.linkedin.com/in/tim-dickeson-32a109148/', class: 'btn btn-primary' %>
+    <%= link_to 'Github', 'https://github.com/imacubsfan23', class: 'btn btn-success' %>
+    <%= link_to 'Portfolio', 'https://imacubsfan23.github.io', class: 'btn btn-danger' %>
+</div>
